<resources>
    <string name="app_name">EasyShop</string>
    <string name="name">Nome</string>
    <string name="make_login">LOGIN</string>
    <string name="title_activity_login">Entrar</string>
    <string name="prompt_sign_up">Você é novo? Cadastre-se</string>
    <string name="prompt_forgot_password">Esqueceu sua senha?</string>
    <string name="title_activity_sign_up">Cadastro</string>
    <string name="prompt_terms_of_use">Li e aceito os termos de uso.</string>
    <string name="prompt_email">Email</string>
    <string name="make_sign_up">CRIAR CONTA</string>
    <string name="prompt_password">Senha</string>
    <string name="title_activity_forgot_password">Esqueci minha senha</string>
    <string name="make_recover_password">RECUPERAR SENHA</string>
    <string name="prompt_my_account">Minha conta</string>
    <string name="prompt_logout">Sair</string>
    <string name="prompt_settings">Configurações</string>
    <string name="prompt_create_item">Cadastrar item</string>
    <string name="prompt_shop_list_example">Ceia de natal</string>
    <string name="prompt_shop_list_example2">Reveillon</string>
    <string name="title_activity_all_items">Todos os itens</string>
    <string name="prompt_item_example">Panetone</string>
    <string name="prompt_item_example2">Peru</string>
    <string name="prompt_item_example3">Bacalhau</string>
    <string name="title_activity_all_items_of_list_example">Todos os itens da Ceia de natal</string>
    <string name="title_activity_store_list">Supermercados</string>
    <string-array name="sort_store_for_array">
        <item>Ordenar por:</item>
        <item>Preço</item>
        <item>Distância</item>
        <item>Preço até 5 km</item>
        <item>Preço até 10 km</item>
        <item>Preço até 50 km</item>
    </string-array>
    <string name="prompt_store_name_example">Supermercado A</string>
    <string name="prompt_store_price_example">R$ 50,00</string>
    <string name="prompt_store_distance_example">12,2 km</string>
    <string name="prompt_store_name_example2">Supermercado B</string>
    <string name="prompt_store_price_example2">R$ 56,00</string>
    <string name="prompt_store_distance_example2">1,2 km</string>
    <string name="prompt_go_to_shop">IR ÀS COMPRAS</string>
    <string name="prompt_close_purchase">FINALIZAR COMPRA</string>
    <string name="title_activity_purchase_items">Itens comprados da Ceia de natal</string>
    <string name="prompt_price">Preço</string>
    <string name="title_activity_register_item">Cadastro de item</string>
    <string name="prompt_register_item">CADASTRAR</string>
    <string-array name="category_for_array">
        <item>Categoria:</item>
        <item>Frios</item>
        <item>Bebidas</item>
        <item>Limpeza</item>
        <item>Alimentos</item>
        <item>Frutas</item>
        <item>Verduras</item>
    </string-array>
    <string name="prompt_bar_code">Código de barras</string>
</resources>
