<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mp20172.easyshop.StoreListActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Spinner
            android:id="@+id/spStoreListSortBy"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:entries="@array/sort_store_for_array"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStoreNameItem1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_store_name_example"
            app:layout_constraintEnd_toStartOf="@+id/tvStorePriceItem1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spStoreListSortBy" />

        <TextView
            android:id="@+id/tvStorePriceItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/prompt_store_price_example"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvStoreNameItem1"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvStoreDistanceItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/prompt_store_distance_example"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStoreNameItem1" />

        <TextView
            android:id="@+id/tvStoreNameItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/prompt_store_name_example2"
            app:layout_constraintTop_toBottomOf="@+id/tvStoreNameItem1"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/tvStorePriceItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/prompt_store_price_example2"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvStoreNameItem2"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvStoreDistanceItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/prompt_store_distance_example2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStoreNameItem2" />

        <Button
            android:id="@+id/btGoToShop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/prompt_go_to_shop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_navigation" />

</android.support.v4.widget.DrawerLayout>
